- Fixing grid layout breaking when filenames overflow the grid box. - Instead of removing specific special chars, the simplifyTokenName used in name comparisons now gets rid off any non-alphanumeric chars.

--- a/styles/artSelect.css
+++ b/styles/artSelect.css
@@ -32,3 +32,7 @@
   border-color: #66afe9;
   box-shadow: 0 0 8px rgba(255,0,0, 0.6);
 }
+
+.token-variants-grid p{
+    overflow: scroll;
+}
